<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_container"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_centerInParent="true"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingLeft="16dp"
    android:paddingTop="10dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:paddingVertical="0dp"
            android:gravity="center_vertical"

            android:text="@string/car_diary_fuel_create_date" />
        <TextView
            android:id="@+id/car_diary_fuel_create_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"

            tools:text="@string/car_diary_fuel_create_date" />



        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:id="@+id/car_diary_fuel_id"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/car_diary_fuel_loaded_fuel"/>
        <TextView
            android:id="@+id/car_diary_fuel_loaded_fuel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/car_diary_fuel_loaded_fuel" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/car_diary_fuel_price_per_liter"/>
        <TextView
            android:id="@+id/car_diary_fuel_price_per_liter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/car_diary_fuel_price_per_liter" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:text="@string/car_diary_fuel_discount"/>
            <TextView
                android:id="@+id/car_diary_fuel_discount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                tools:text="@string/car_diary_fuel_discount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:text="@string/car_diary_fuel_totalPrice"/>
        <TextView
            android:id="@+id/car_diary_fuel_totalPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/car_diary_fuel_totalPrice" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/car_diary_fuel_since_last_time_km"/>
        <TextView
            android:id="@+id/car_diary_fuel_since_last_time_km"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/car_diary_fuel_since_last_time_km" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/car_diary_fuel_total_Km"/>
        <TextView
            android:id="@+id/car_diary_fuel_total_Km"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/car_diary_fuel_total_Km" />
    </LinearLayout>





</LinearLayout>


