<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/edit_car_diary_repairs_name"/>
                <EditText
                    android:id="@+id/edit_car_diary_repairs_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:inputType="text"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/car_diary_repairs_description"/>
                <EditText
                    android:id="@+id/edit_car_diary_repairs_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CalendarView
                    android:id="@+id/edit_car_diary_repairs_create_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_car_diary_repairs_bttn"
                    android:onClick="deleteCarDiaryRepairs"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:text="@string/delete"
                    android:background="@color/red"
                    android:layout_marginRight="10dp"
                    app:backgroundTint="@color/red"
                    />

                <Button
                    android:onClick="closeCarDiaryRepairs"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/close"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    />

                <Button
                    android:onClick="saveCarDiaryRepairs"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/save"
                    android:layout_weight="2"
                    />

            </LinearLayout>
            <EditText
                android:id="@+id/edit_car_diary_repairs_id"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:visibility="invisible"
                android:inputType="number"

                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
